Add Android model manager and audio enhancement